Add a connectkernel utility to support the usbredir kernel module.
This utility will connect to a remote system running usbredirserver,
and then write the socket to the sysfs attach point of usbredir,
thereby injecting the remote device into the local kernel.

Signed-off-by: Jeremy White <jwhite@codeweavers.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
 SUBDIRS = usbredirparser usbredirhost
 if ! OS_WIN32
-SUBDIRS += usbredirserver  usbredirtestclient
+SUBDIRS += usbredirserver connectkernel usbredirtestclient
 endif
 
 EXTRA_DIST = README.multi-thread usb-redirection-protocol.txt
